# qorm

./: .gitignore  README.md  examples.md  pyproject.toml
erisk/qorm/: __init__.py  __main__.py  engine.py  exc.py  pagination.py  registry.py  retry.py  rpc.py  session.py
erisk/qorm/connection/: base.py  handshake.py  pool.py
erisk/qorm/model/: base.py  fields.py  keyed.py  reflect.py  schema.py  validated.py
erisk/qorm/protocol/: framing.py  serializer.py
erisk/qorm/qns/: __init__.py  _resolver.py
erisk/qorm/query/: compiler.py  expressions.py  insert.py  joins.py  select.py  update.py
erisk/qorm/types/: atoms.py  temporal.py
src/qorm/: __init__.py  cli.py  codegen.py  config.py  engine.py  exc.py  registry.py  session.py  subscription.py
src/qorm/connection/: async_conn.py  pool.py  sync_conn.py
src/qorm/model/: base.py  fields.py  meta.py  reflect.py  schema.py
src/qorm/protocol/: compress.py  constants.py  (+1 more)
tests/: conftest.py
tests/integration/: test_connection.py  test_session.py
tests/unit/: test_codegen.py  test_compression.py  test_config.py  test_deserializer.py  test_each.py  test_exec_query.py  test_explain.py  test_expressions.py  test_fby.py  test_keyed_reflect.py  test_logging.py  test_model.py  test_pagination.py  test_pool_health.py  test_pool_registry.py  test_qns.py  test_qns_registry.py  test_qns_resolver.py  test_query.py  test_reflect.py  test_registry.py  test_retry.py  test_rpc.py  test_serializer.py  test_subscription.py  test_temporal.py  test_tls.py  test_types.py  test_uppercase_types.py  test_validated.py
(+16 files in other folders)
