[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qorm"
version = "0.1.0"
description = "Python ORM for q/kdb+"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["kdb", "q", "orm", "database", "timeseries"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
toml = ["tomli>=2.0; python_version<'3.11'"]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["src/qorm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a live kdb+ process"]
asyncio_mode = "auto"
